# honda_hackathon

key_points/: CMakeLists.txt  first.pcd  main.cpp
pose_estimation/: aruco_detect.py  aruco_gen.py  calib.npz  camera_calib.py  car_detect.py  good_feat_to_track.py  harris.py  img_tut.py  inspectValues.m  led_detect.py  mat_mask_operations.py  matplotlib_tut.py  pose_estimation.py  sift.py  subpixel.py  video_tut.py
